--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cfft",
-  "displayName": "cfft",
-  "description": "A simple but powerful VS extension to generate a list of files from templates.",
-  "version": "0.0.1",
+  "displayName": "Create Files From Template (CFFT)",
+  "description": "A simple but powerful Visual Studio Code extension to generate a list of files from templates.",
+  "version": "1.5.13",
   "engines": {
     "vscode": "^1.92.0"
   },
@@ -11,20 +11,18 @@
   ],
   "activationEvents": [],
   "keywords": [
-    "CLI",
     "generate",
     "create",
     "files",
     "template",
     "templates",
-    "scaffolding",
     "bootstrap",
     "boilerplate",
-    "skeleton",
     "replace",
-    "search"
+    "search",
+    "scaffolding"
   ],
-  "author": "Dušan Stojanović",
+  "author": "Dusan Stojanovic",
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -71,6 +69,6 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@beezydev/create-files-from-template-base": "^1.5.9"
+    "@beezydev/create-files-from-template-base": "^1.5.13"
   }
 }
