--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "cfft",
   "displayName": "Create Files From Template (CFFT)",
   "description": "A simple but powerful Visual Studio Code extension to generate a list of files from templates.",
+  "icon": "images/icon.png",
+  "publisher": "DusanStojanovic",
   "version": "1.5.13",
   "engines": {
     "vscode": "^1.92.0"
