--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple but powerful Visual Studio Code extension to generate a list of files from templates.",
   "icon": "images/icon.png",
   "publisher": "DusanStojanovic",
-  "version": "1.7.2",
+  "version": "1.8.0",
   "engines": {
     "vscode": "^1.92.0"
   },
@@ -45,6 +45,16 @@
           "group": "navigation@9"
         }
       ]
+    },
+    "configuration": {
+      "title": "CFFT",
+      "properties": {
+        "CFFT.rootFolder": {
+          "type": "string",
+          "default": "",
+          "description": "The path to the root folder containing the .cfft.config.json file. Use this field to share and reuse the same configuration across multiple projects efficiently."
+        }
+      }
     }
   },
   "scripts": {
